# backend

./: .gitignore  Dockerfile-django  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_llama.sh
Docker/celery/: Dockerfile-celery  worker-entrypoint.sh
verifai/: Procfile  manage.py  requirements.txt  temp.txt
verifai/api/: models.py  pipeline.py  serializers.py  tasks.py  urls.py  views.py
verifai/api/migrations/: 0001_initial.py  0002_rename_content_fact_claim_remove_fact_verified.py  0003_fact_justification_fact_sources_fact_veracity_and_more.py  0004_remove_fact_veracityscore.py
verifai/verifai/: .env  asgi.py  celery.py  settings.py  urls.py  wsgi.py
